# langchain-rag-sandbox

./: .gitignore  main.py  pyproject.toml
data/: state_of_the_union.txt
src/langchain_rag_tutorial/: app.py  data.py
src/rag/: app.py  data.py  util.py
