[project]
name = "lang-chain-rag-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "openai>=1.86.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
