[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "faiss-cpu>=1.11.0",
  "langchain>=0.3.25",
  "langchain-community>=0.3.25",
  "langchain-openai>=0.1.0",
  "langchain-unstructured>=0.1.0",
  "openai>=1.86.0",
  "unstructured>=0.17.2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[project.scripts]
data = "rag.data:ingest_data"
app = "rag.app:qa"
